--- a/frontend/src/components/Navigation/ProfileButton.css
+++ b/frontend/src/components/Navigation/ProfileButton.css
@@ -16,6 +16,21 @@
 
 }
 
+.demoUserButton {
+    background: linear-gradient(to bottom right, #e82855, #ce0e78);
+    color: white;
+    font-weight: 500;
+    height: 30px;
+    width: 100px;
+
+    border-radius: 5px;
+}
+
+.demoUserButton:hover {
+  cursor: pointer;
+  background: #e82855;
+
+}
 
 .nav_user_icon {
     color: #717171;
@@ -29,8 +44,6 @@
     padding-left: 5px;
     
 }
-
-
 
 
 #dropdown {
