--- a/frontend/src/components/SignUpFormPage/Signup.css
+++ b/frontend/src/components/SignUpFormPage/Signup.css
@@ -1,39 +1,39 @@
-.LogInBttn {
+.signUp {
     background: linear-gradient(to bottom right, #e82855, #ce0e78);
     color: white;
     font-weight: 500;
     height: 30px;
-    width: 90px;
-    /* margin-left: 10px; */
-    margin-bottom: 10px;
+    width: 150px;
+    gap: 5px;
     border-radius: 5px;
     font-family: 'Circular','BlinkMacSystemFont','Roboto','Helvetica Neue',sans-serif;
 
 }
 
-.LogInBttn:hover {
+.signUp:hover {
   cursor: pointer;
   background: #e82855;
+  
+
 
 }
 
-.Errors{
-height: 35px;
-width: 90%;
-}
-
-.Login_form {
-  margin-top: 10px;
-  margin-bottom: 10px;
-  border: #D3D3D3 1.5px solid;
-  border-radius: 20px;
+.signUpForm {
+  width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   gap: 20px;
-  width: 50%;
 }
+
+/* #modal-content>h2 {
+  font-weight: 500;
+  font-size: 25px;
+  flex-direction: row;
+  display: flex;
+  justify-content: center;
+  color: #ce0e78;
+} */
 
 .input {
   height: 40px;
@@ -41,11 +41,9 @@ width: 90%;
   width: 100%;
   border-radius: 5px;
   color: black;
-  margin-bottom: 40px;
-
 }
 
-/* #modal-content {
+#modal-content {
   margin-top: 50px;
   border: #D3D3D3 1.5px solid;
   border-radius: 20px;
@@ -56,4 +54,4 @@ width: 90%;
   justify-content: center;
   gap: 20px;
   width: 50%;
-} */
+}
