--- a/frontend/src/components/DemoUser/demo.css
+++ b/frontend/src/components/DemoUser/demo.css
@@ -1,4 +1,4 @@
-.demoUserButton {
+/* .demoUserButton {
     background: linear-gradient(to bottom right, #e82855, #ce0e78);
     color: white;
     font-weight: 500;
@@ -10,6 +10,6 @@
 
 .demoUserButton:hover {
   cursor: pointer;
-  background: #e82855;
 
-}
+
+} */
