--- a/frontend/src/components/CreateSpot/createAspot.css
+++ b/frontend/src/components/CreateSpot/createAspot.css
@@ -1,15 +1,40 @@
-.createSpotPage1 {
-    margin-top: 50px;
-    border: #D3D3D3 1.5px solid;
-    border-radius: 20px;
-    margin-left: 200px;
+.createcontainerspot{
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 20px;
-    width: 60%;
+    padding: 0px 0px 20px;
+    height: 42.5rem;
+
+
 }
+.wwx{
+    margin-left: 55px;
+    margin-top: 25%;
+}
+
+#createspot{
+   background-color: transparent;
+    margin: 33px;
+    width: fit-content;
+    font-size: 35px;
+    margin-top: 51px;
+
+}
+.creategraphic{
+width: 50%;
+/* border: #D3D3D3 1.5px solid; */
+height: 42.5rem;
+padding: 0px 20px 20px;
+font-family: 'Circular','BlinkMacSystemFont','Roboto','Helvetica Neue',sans-serif;
+color:white;
+font-size: 25px;
+
+background: rgb(75,47,166);
+background: linear-gradient(0deg, rgba(75,47,166,1) 0%, rgba(206,56,122,1) 100%);
+/* display: flex;
+align-items: center; */
+
+
+}
+
 
 .error {
     width: 100%;
@@ -21,44 +46,8 @@
     
 }
 
-.createSpotPage1>p {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-weight: 200;
-    font-size: 17px;
-    width: 100%;
-    letter-spacing: .5px;
-}
 
 
-.createSpotForm1 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 65%;
-    gap: 20px;
-}
-
-.createSpotForm1>label>input,
-.createSpotForm1>label {
-    width: 100%;
-}
-
-
-.createSpotForm1>label>p {
-    font-weight: 500;
-    font-size: 22px;
-    margin-bottom: 10px;
-    width: 100%;
-}
-
-.createSpotForm1>label>input {
-    height: 40px;
-    width: 100%;
-    border-radius: 5px;
-    color: black;
-}
 
 .description {
     height: 50px;
@@ -71,7 +60,9 @@
     justify-content: space-around;
     gap: 5px;
 }
-
+#location{
+    margin-bottom: 5px;
+}
 .address>input {
     height: 40px;
     width: 33%;
@@ -83,14 +74,15 @@
 
 
 .create {
-    background: linear-gradient(to bottom right,
-    #e82855, #ce0e78);
-    color: white;
-    font-weight: 500;
-    height: 45px;
-    width: 50%;
-    margin: 15px;
+    background: linear-gradient(to bottom right, #e82855, #ce0e78);
+    border: transparent;
+    font-family: 'Circular','BlinkMacSystemFont','Roboto','Helvetica Neue',sans-serif;
     border-radius: 10px;
+    font-size: 17px;
+    margin: 7px 0px;
+    width: 100%;
+    height: 48px;
+    color: white;
 }
 
 .create:hover {
