--- a/frontend/src/components/EditSpot/editSpot.css
+++ b/frontend/src/components/EditSpot/editSpot.css
@@ -1,20 +1,16 @@
 .createSpotPage {
-    margin-top: 50px;
-    border: #D3D3D3 1.5px solid;
-    border-radius: 20px;
-    margin-left: 360px;
+    /* border: #D3D3D3 1.5px solid; */
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    gap: 20px;
-    width: 60%;
+    width: 50%;
+    height: 42.5rem;
+    overflow: scroll;
+    padding: 0px 20px 20px;
 }
 
 .createSpotPage>h2 {
     font-weight: 500;
-    font-size: 55px;
-
 }
 
 .createSpotPage>p {
@@ -37,8 +33,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 65%;
-    gap: 20px;
+
 }
 
 .createSpotForm>label>input,
@@ -49,7 +44,6 @@
 
 .createSpotForm>label>p {
     font-weight: 500;
-    font-size: 22px;
     margin-bottom: 10px;
     width: 100%;
 }
@@ -61,7 +55,18 @@
     border-radius: 5px;
     color: black;
 }
-
+.label{
+    height: 40px;
+    border: #D3D3D3 1.5px solid;
+    width: 100%;
+    border-radius: 5px;
+    color: black;
+}
+.editlabel{
+    width: 76%;
+    display: flex;
+    flex-direction: column;
+}
 .description {
     height: 50px;
 }
@@ -77,7 +82,17 @@
     justify-content: space-around;
     gap: 5px;
 }
-
+.location{
+height: 40px;
+}
+.editadress {
+    display: flex;
+    width: 76%;
+    
+    justify-content: space-around;
+    gap: 10px;
+    margin-top: 5px;
+}
 .address>input {
     height: 40px;
     width: 33%;
@@ -87,20 +102,21 @@
     padding: 5px;
 }
 
-
-.editbutton28376 {
-    background: linear-gradient(to bottom right,
-    #e82855, #ce0e78);
-    color: white;
-    font-weight: 500;
-    height: 45px;
-    width: 50%;
-    margin: 15px;
+.editcreate{
+    background: linear-gradient(to bottom right, #e82855, #ce0e78);
+    border: transparent;
+    font-family: 'Circular','BlinkMacSystemFont','Roboto','Helvetica Neue',sans-serif;
     border-radius: 10px;
-    margin-bottom: 5%;
+    font-size: 17px;
+    margin: 9px 0px;
+    margin-left: 8px;
+    width: 79%;
+    height: 52px;
+    color: white;
+    padding: 14px;
 }
 
-.editbutton28376:hover {
+.editcreate:hover {
     cursor: pointer;
     background-color: #E5204D;
 }
