--- a/frontend/src/components/Navigation/ProfileButton.css
+++ b/frontend/src/components/Navigation/ProfileButton.css
@@ -3,47 +3,43 @@
     background-color: white;
     margin-bottom: 10px;
     border: white;
-    border-radius: 20px;
-    height: 40px;
-    width: 80px;
+    border-radius: 25px;
+    height: fit-content;
+    width: 85px;
     text-align: start;
-    padding-left: 10px;
     font-size: 15px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     border: 1px solid #DDDDDD;
+    cursor: pointer;
+  
+    padding: 5px 5px 5px 12px;
+    margin: 5px;
+}
 
+#menu:hover{
+    box-shadow: 0px 1px 5px 1px rgba(209, 207, 207, 0.696);
 }
 
 .demoUserButton {
-    background: linear-gradient(to bottom right, #e82855, #ce0e78);
-    color: white;
-    font-weight: 500;
-    height: 30px;
-    width: 100px;
+    background: transparent;
+    font-size: 15px;
+    color: gray;
+    font-weight: 700;
+    
+    border: transparent;
+    font-family: 'Circular','BlinkMacSystemFont','Roboto','Helvetica Neue',sans-serif;
 
-    border-radius: 5px;
+
 }
 
 .demoUserButton:hover {
   cursor: pointer;
-  background: #e82855;
 
 }
 
-.nav_user_icon {
-    color: #717171;
-    padding-right: 5px;
-    font-size: 30px;
-}
 
-.nav_bars_icon {
-    color: #595959;
-    font-size: 15px;
-    padding-left: 5px;
-    
-}
 
 
 #dropdown {
