--- a/frontend/src/components/Spots/spots.css
+++ b/frontend/src/components/Spots/spots.css
@@ -1,19 +1,20 @@
 .user-spots-whole-page {
     display: grid;
-    grid-template-columns: 1fr 4fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
   }
   
   .all-spots-div {
     
     display: grid;
-    grid-template-columns: 1fr 4fr 1fr;
-    /* grid-template-columns: 1fr 1fr 1fr 1fr; */
+    /* grid-template-columns: 1fr 4fr 1fr; */
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     place-items: center;
+    padding: 0 60px;
   }
   
   .spot-div {
-    height: 490px;
-    width: 400px;
+    height: 380px;
+    width: 300px;
     margin: 10px;
   }
   
@@ -29,7 +30,7 @@
   .spotImg {
     float: left;
     width: 300px;
-    height: 300px;
+    height: 280px;
     background-size: cover;
     border-radius: 15px;
     margin: 1rem;
@@ -46,6 +47,7 @@
     display: flex;
     flex-direction: row;
     align-items: flex-end;
+    margin-bottom: 8px;
 
   }
 
@@ -61,7 +63,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-left: 30px;
+    margin-left: 15px;
   }
   
   .spot-rating {
@@ -86,7 +88,7 @@
   
   .star-icon{
     font-size: 1rem;
-    color: #FF385C
+    color: #020202
     
   }
   
