--- a/frontend/src/components/SpotById/review.css
+++ b/frontend/src/components/SpotById/review.css
@@ -1,5 +1,6 @@
 .all-reviews-div {
-    margin: 10px 10px 50px 20px;
+    margin-top: 40px;
+    margin-bottom: 40px;
 }
 
 
@@ -30,18 +31,26 @@
 
 }
 
-
+.actual-review{
+    font-size: 16px;
+}
 
 .space{
     margin: 5px;
 }
-
+.profile{
+    
+}
 .starspace{
     margin: 2px;
 }
-
+.reviewuser{
+    font-size: 16px;
+    width: 159px;
+}
 
 .userStars{
     display: flex;
     flex-direction: row;
+    font-size: 16px;
 }
