LoginFrom line 53 - edit

--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -53,8 +53,9 @@
 .welcome{
   font-size: 22px;
   font-family: 'Circular', 'sans-serif';
-  margin: 16px 0px;
-  color: rgb(34, 34, 34)
+  margin-bottom: 16px;
+  margin-top: 0px;
+  color: rgb(34, 34, 34);
 
 }
 
