--- a/frontend/src/components/SpotById/review.css
+++ b/frontend/src/components/SpotById/review.css
@@ -1,6 +1,15 @@
 .all-reviews-div {
     margin-top: 40px;
     margin-bottom: 40px;
+    
+}
+.heading{
+    font-size: 1.5rem;
+    background-color: #f9e8f2;
+    display: flex;
+    flex-direction: row;
+    padding: 1rem;
+    gap: .5rem;
 }
 #dot{
     font-size: .25rem;
