--- a/frontend/src/components/SpotById/review.css
+++ b/frontend/src/components/SpotById/review.css
@@ -1,6 +1,8 @@
 .all-reviews-div {
     margin-top: 40px;
     margin-bottom: 40px;
+    display: flex;
+    flex-direction: column;
     
 }
 .heading{
@@ -8,7 +10,7 @@
     background-color: #f9e8f2;
     display: flex;
     flex-direction: row;
-    padding: 1rem;
+    padding: 1rem 0rem;
     gap: .5rem;
 }
 #dot{
@@ -50,24 +52,31 @@
 
 .actual-review{
     font-size: 16px;
+    display: flex;
+    flex-direction: column;
+    background-color: #ebf6ab;
 }
 
 .space{
     margin: 5px;
 }
-.profile{
-    
-}
 .starspace{
     margin: 2px;
 }
 .reviewuser{
-    font-size: 16px;
+    font-size: 1.2rem;
     width: 159px;
 }
 
 .userStars{
     display: flex;
     flex-direction: row;
-    font-size: 16px;
+    background-color: #f691ca62;
+    align-items: top;
+    gap: 1rem;
+    margin-top: 1.5rem;
+}
+#individualreview{
+    font-size: 2.5rem;
+    
 }
