--- a/frontend/src/components/SpotById/review.css
+++ b/frontend/src/components/SpotById/review.css
@@ -38,9 +38,8 @@
     background: linear-gradient(to bottom right, #e82855, #ce0e78);
     color: white;
     font-weight: 500;
-    height: 30px;
-    width: 150px;
-
+    padding: .5rem;
+    border: none;
     border-radius: 5px;
 }
 
